--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohammad E. Sepehr</title>
+    <title>MOHAMMAD E. SEPEHR, Software Agile Coatch</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
-<body>
-    Here is Sepehr
+<body style="opacity:0">
+    <header>
+        <div id="image">
+            <img src="./img/mesepehr.jpg" alt="MESepehr Photo">
+        </div>
+        <div id="info">
+            <div>
+                <div id="title">PROFESSIONS</div>
+                    <div id="detail">Technical Team Lead</div>
+                    <div id="detail">Agile Metodology Leader</div>
+                    <div id="detail">Devops CI/CD</div>
+                    <div id="detail">Programmig and Algorithm Design</div>
+                <div id="title">EDUCATION</div>
+                    <div id="detail">Bachelor of Software Computer</div>
+            </div>
+        </div>
+    </header>
+    <h1>MOHAMMAD E. SEPEHR, Software Agile Coatch</h1>
+    <div id="body">
+        <div id="left_side">
+            <div id="title">CONTACT</div>
+        </div>
+    </div>
 </body>
+<script>
+    document.addEventListener("DOMContentLoaded", function(event) {
+        document.body.style = "opacity:1";
+    });
+</script>
 </html>
