--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOHAMMAD E. SEPEHR, Software Agile Coatch</title>
+    <title>MOHAMMAD E. SEPEHR, Senior Solution Architect</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body style="opacity:0">
@@ -24,10 +24,20 @@
             </div>
         </div>
     </header>
-    <h1>MOHAMMAD E. SEPEHR, Software Agile Coatch</h1>
+    <h1>MOHAMMAD E. SEPEHR, Senior Solution Architect</h1>
     <div id="body">
         <div id="left_side">
             <div id="title">CONTACT</div>
+            <div id="detail">Tehran, Iran</div>
+            <div id="detail"><a href="mailto:ebrahimsepehr@gmail.com">ebrahimsepehr@gmail.com</a></div>
+            <div id="detail"><a href="tel:+989127785180">+98 912 778 51 80</a></div>
+            <div id="detail"><a href="https://ebrahimsepehr.ir">ebrahimsepehr.ir</a></div>
+            <div id="detail"><a href="https://linkedin.com/in/mohamad-e-sepehr">linkedin.com/in/mohamad-e-sepehr</a></div>
+            <div id="detail"><a href="https://github.com/MESepehr">github.com/MESepehr</a></div>
+            
+        <div id="title">PERSONAL DETAILS</div>
+            <div id="detail">April 15, 1989  ∙ Tehran</div>
+            <div id="detail">Male ∙ Married</div>
         </div>
     </div>
 </body>
