Left and Right side size corrected

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 
             <div id="title">Additional experience</div>
                 <div id="detail">Additional experience as a Web  Design Lecturer for 3 terms at the Art University of Isfahan and got Appreciation letters, and as a web developer for Hoogaman for 2 years and Software Developer for Ganjineh Yaad Co  for 1 year.</div>
-            
+            <div id="extra_space"></div>
         </div>
     </div>
 </body>
