Status bar sample

--- a/index.html
+++ b/index.html
@@ -58,6 +58,32 @@
             
             <div id="title2">Major Customers</div>
                 <div id="detail">ByUs Co. - 2022</div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>Devops</h4>
+                        <div><div></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Devops</h4>
+                        <div><div></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Devops</h4>
+                        <div><div></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Devops</h4>
+                        <div><div></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Devops</h4>
+                        <div><div></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Devops</h4>
+                        <div><div></div></div>
+                    </div>
+                </div>
                 <div id="detail">Paliz Co - 2021</div>
                 <div id="detail">Helli Institude - 2021</div>
                 <div id="detail">Online Exchange - 2020</div>
