--- a/index.html
+++ b/index.html
@@ -56,32 +56,25 @@
                 <div id="detail">Technical Scope:  CI/CD, PHP, C#, Python, NodeJS, SQL, JavaScript</div>
                 <div id="detail">I got involved in companies to analyse problems and make solutions. Technical team director and guides them to do their best. Participate in hiring more than 20 developers. then help them to achieve higher levels of output & service. Do the product owner role to raise customer's awareness of the project process and the situation.</div>
             
-            <div id="title2">Major Customers</div>
-                <div id="detail">ByUs Co. - 2022</div>
+            <!-- <div id="title2">Major Customers</div> -->
+                <div id="title2">ByUs Co. - 2022    <a id="web_page" href="https://byus.ir/">( byus.ir )</a></div>
+                <div id="detail">Technical Lead - CI/CD Engineer - Programmer</div>
                 <div id="status_box">
                     <div id="status_bar">
-                        <h4>Devops</h4>
-                        <div><div></div></div>
+                        <h4>GitHub Actions</h4>
+                        <div><div style="width:100%"></div></div>
                     </div>
                     <div id="status_bar">
-                        <h4>Devops</h4>
-                        <div><div></div></div>
+                        <h4>AWS</h4>
+                        <div><div style="width:100%"></div></div>
                     </div>
                     <div id="status_bar">
-                        <h4>Devops</h4>
-                        <div><div></div></div>
+                        <h4>PHP</h4>
+                        <div><div style="width:30%"></div></div>
                     </div>
                     <div id="status_bar">
-                        <h4>Devops</h4>
-                        <div><div></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Devops</h4>
-                        <div><div></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Devops</h4>
-                        <div><div></div></div>
+                        <h4>JavaScript</h4>
+                        <div><div style="width:20%"></div></div>
                     </div>
                 </div>
                 <div id="detail">Paliz Co - 2021</div>
