--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="preload" href="./fonts/calibri.eot" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="./fonts/calibri.eot?#iefix" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="./fonts/calibri.woff" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="./fonts/calibri.ttf" as="font" type="font/woff" crossorigin>
+    <link rel="preload" href="./fonts/calibri.svg#calibri" as="font" type="font/woff" crossorigin>
+
 </head>
 <body style="opacity:0">
     <header>
