--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
                 <div id="detail">I got involved in companies to analyse problems and make solutions. Technical team director and guides them to do their best. Participate in hiring more than 20 developers. then help them to achieve higher levels of output & service. Do the product owner role to raise customer's awareness of the project process and the situation.</div>
             
             <!-- <div id="title2">Major Customers</div> -->
-                <div id="title2">ByUs Co. - 2022    <a id="web_page" href="https://byus.ir/">( byus.ir )</a></div>
-                <div id="detail">Technical Lead - CI/CD Engineer - Programmer</div>
+                <div id="title2">ByUs Co. - 2022    <a id="web_page" href="https://byus.ir/">( byus.ir - Mr. Kazemi)</a></div>
+                <div id="detail">As a Technical lead, I was in charge to make technical decisions and assign tasks in a Kanban method to 4 programmers and technical members.</div>
                 <div id="status_box">
                     <div id="status_bar">
-                        <h4>GitHub Actions</h4>
+                        <h4>AWS</h4>
                         <div><div style="width:100%"></div></div>
                     </div>
                     <div id="status_bar">
-                        <h4>AWS</h4>
+                        <h4>GitHub Actions</h4>
                         <div><div style="width:100%"></div></div>
                     </div>
                     <div id="status_bar">
@@ -83,7 +83,27 @@
                         <div><div style="width:20%"></div></div>
                     </div>
                 </div>
-                <div id="detail">Paliz Co - 2021</div>
+                <div id="title2">Paliz Co - 2021    <a id="web_page" href="https://palizct.com/">( palizct.com - Mr. Jahangard)</a></div>
+                <div id="detail">I was hired to redesign the management and technical softwares of the company to an integrated model of Azure Devops and to train a team of 8 programmers and 5 executives in this field.<br/>
+                I also developed two mobile and web-based games.</div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>Solution Architect</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Azure DevOps</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Game Programmer</h4>
+                        <div><div style="width:90%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Reserch & Development</h4>
+                        <div><div style="width:70%"></div></div>
+                    </div>
+                </div>
                 <div id="detail">Helli Institude - 2021</div>
                 <div id="detail">Online Exchange - 2020</div>
 
