--- a/index.html
+++ b/index.html
@@ -158,7 +158,48 @@
                 </div>
 
 
-            <div id="title"> Web  Design Lecturer</div>
+            <div id="title">Awards and Certificates</div>
+                <div id="title2">Art University of Isfahan - 2012 to 2015  <a id="web_page" target="_blank" href="https://en.aui.ac.ir/">( aui.ac.ir )</a></div>
+                <div id="status_box">
+                    <a target="_blank" id="image_3" href="./img/ArtUniversityofIsfahan-2015.jpg"><img src="./img/ArtUniversityofIsfahan-2015.jpg" alt="Art University of Isfahan - 2015"/></a>
+                    <a target="_blank" id="image_3" href="./img/ArtUniversityofIsfahan-2013.jpg"><img src="./img/ArtUniversityofIsfahan-2013.jpg" alt="Art University of Isfahan - 2013"/></a>
+                    <a target="_blank" id="image_3" href="./img/ArtUniversityofIsfahan-2012.jpg"><img src="./img/ArtUniversityofIsfahan-2012.jpg" alt="Art University of Isfahan - 2012"/></a>
+                </div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>Web Design</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>HTML5</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>CSS3</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Graphic</h4>
+                        <div><div style="width:10%"></div></div>
+                    </div>
+                </div>
+                <div id="title2">Patent certificate<a id="web_page" target="_blank" href="https://ipm.ssaa.ir/_Search/Invention.aspx#page-1">( ipm.ssaa.ir RN=66427 )</a></div>
+                <div id="status_box">
+                    <a target="_blank" id="image_3" href="./img/Patent.jpeg"><img src="./img/Patent.jpeg" alt="Patent certificate"/></a>
+                </div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>UI Programmer</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Middle Ware Programmer</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar"></div>
+                    <div id="status_bar"></div>
+                </div>
+                
 
             <div id="title">Chief Technology Officer - Senior Programmer</div>
             <div id="title2">Saffron Co.(2019 - 2021)</div>
