SEO Friendly works

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MOHAMMAD E. SEPEHR, Senior Solution Architect</title>
+    <meta name="author" content="Mohammad E. Sepehr">
     <link rel="stylesheet" href="./style/style.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -15,11 +16,15 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <link rel="preload" href="./fonts/calibri.eot" as="font" type="font/woff" crossorigin>
-    <link rel="preload" href="./fonts/calibri.eot?#iefix" as="font" type="font/woff" crossorigin>
-    <link rel="preload" href="./fonts/calibri.woff" as="font" type="font/woff" crossorigin>
-    <link rel="preload" href="./fonts/calibri.ttf" as="font" type="font/woff" crossorigin>
-    <link rel="preload" href="./fonts/calibri.svg#calibri" as="font" type="font/woff" crossorigin>
+    <meta name="description" content="Senior Solution Architect, Creative and driven professional with over 13-year track record of innovation and success">
+
+    <link rel="preload" href="./fonts/calibri.eot" as="font" type="font/woff" crossOrigin="anonymous">
+    <link rel="preload" href="./fonts/calibri.eot?#iefix" as="font" type="font/woff" crossOrigin="anonymous">
+    <link rel="preload" href="./fonts/calibri.woff" as="font" type="font/woff" crossOrigin="anonymous">
+    <link rel="preload" href="./fonts/calibri.ttf" as="font" type="font/woff" crossOrigin="anonymous">
+    <link rel="preload" href="./fonts/calibri.svg#calibri" as="font" type="font/woff" crossOrigin="anonymous">
+    <link rel="preload" href="./fonts/calibri.svg#calibri" as="font" type="font/woff" crossOrigin="anonymous">
+    <link rel="preload" href="./img/mesepehr.jpg" as="image" type="image/jpeg" crossOrigin="use-credentials">
 
 </head>
 <body style="opacity:0">
