--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MOHAMMAD E. SEPEHR, Senior Solution Architect</title>
+    <title>MOHAMMAD E. SEPEHR, Principal Solution Architect</title>
     <meta name="author" content="Mohammad E. Sepehr">
     <link rel="stylesheet" href="./style/style.css">
 
@@ -16,7 +16,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="description" content="Senior Solution Architect, Creative and driven professional with over 13-year track record of innovation and success">
+    <meta name="description" content="Principal Solution Architect, Creative and driven professional with over 13-year track record of innovation and success">
 
     <link rel="preload" href="./fonts/calibri.eot" as="font" type="font/woff" crossOrigin="anonymous">
     <link rel="preload" href="./fonts/calibri.eot?#iefix" as="font" type="font/woff" crossOrigin="anonymous">
@@ -44,7 +44,7 @@
             </div>
         </div>
     </header>
-    <h1>MOHAMMAD E. SEPEHR, Senior Solution Architect</h1>
+    <h1>MOHAMMAD E. SEPEHR, Principal Solution Architect</h1>
     <div id="body">
         <div id="left_side">
             <div id="sticky">
@@ -206,7 +206,7 @@
                 </div>
                 
 
-            <div id="title">Chief Technology Officer - Senior Programmer</div>
+            <div id="title">Chief Technology Officer - Lead Programmer</div>
             <div id="title2">Saffron Co.(2019 - 2021)</div>
                 <div id="detail">Technical Scope:  Development Director, Technical Lead, Research, JavaScript, Adobe Air</div>
                 <div id="detail">I created a Software Development Kit, named SaffronCodeSDK which gathered from about 500 Libraries and Tools mostly developed by myself over 6 years.</div>
