Being more SEO friendly

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <meta name="description" content="Principal Solution Architect, Creative and driven professional with over 13-year track record of innovation and success">
+    <meta name="keywords" content="محمد ابراهیم سپهر, سپهر, mesepehr, Mohammad E. Sepehr, Solution Architect, Programmer, Technical Lead, Agile Coach">
 
     <link rel="preload" href="./fonts/calibri.eot" as="font" type="font/woff" crossOrigin="anonymous">
     <link rel="preload" href="./fonts/calibri.eot?#iefix" as="font" type="font/woff" crossOrigin="anonymous">
@@ -65,11 +66,11 @@
             <div id="title">Director of Development - Research - Technical Architect</div>
             <div id="title2"> (2021 - Present)</div>
                 <!-- <div id="detail">Technical Scope:  CI/CD, PHP, C#, Python, NodeJS, SQL, JavaScript</div> -->
-                <div id="detail">I got involved in companies to analyse problems and make solutions. Technical team director and guides them to do their best. Participate in hiring more than 20 developers. then help them to achieve higher levels of output & service. Do the product owner role to raise customer's awareness of the project process and the situation.</div>
+                <p id="detail">I got involved in companies to analyse problems and make solutions. Technical team director and guides them to do their best. Participate in hiring more than 20 developers. then help them to achieve higher levels of output & service. Do the product owner role to raise customer's awareness of the project process and the situation.</p>
             
             <!-- <div id="title2">Major Customers</div> -->
                 <div id="title2">ByUs Co. - 2022    <a target="_blank" id="web_page" href="https://byus.ir/">(byus.ir - Mr. Kazemi)</a></div>
-                <div id="detail">As a Technical lead, I was in charge to make technical decisions and assign tasks in a Kanban method to 4 programmers and technical members.</div>
+                <p id="detail">As a Technical lead, I was in charge to make technical decisions and assign tasks in a Kanban method to 4 programmers and technical members.</p>
                 <div id="status_box">
                     <a target="_blank" id="web_page" href="https://forjump.com/">forjump.com</a>
                 </div>
@@ -92,8 +93,8 @@
                     </div>
                 </div>
                 <div id="title2">Paliz Co - 2021    <a target="_blank" id="web_page" href="https://palizct.com/">(palizct.com - Mr. Jahangard)</a></div>
-                <div id="detail">I was hired to redesign the management and technical softwares of the company to an integrated model of Azure Devops and to train a team of 8 programmers and 5 executives in this field.<br/>
-                I also developed two mobile and web-based games.</div>
+                <p id="detail">I was hired to redesign the management and technical softwares of the company to an integrated model of Azure Devops and to train a team of 8 programmers and 5 executives in this field.<br/>
+                I also developed two mobile and web-based games.</p>
                 <div id="status_box">
                     <a target="_blank" id="web_page" href="https://cafebazaar.ir/app/air.com.palizct.talab">Talab-e-man Android Game</a>
                     <a target="_blank" id="web_page" href="https://sibche.com/applications/%D8%AA%D8%A7%D9%84%D8%A7%D8%A8-%D9%85%D9%86">iOS Game</a>
@@ -118,7 +119,7 @@
                     </div>
                 </div>
                 <div id="title2">Helli Institude - 2021    <a target="_blank" id="web_page" href="https://www.mhelli.com/about-us/">(mhelli.com - Mr. Ansari)</a></div>
-                <div id="detail">I had a task to make a solution for continuing to develop the and support for the source of the online exam builder project, and doing recruitment process for selecting programmers.</div>
+                <p id="detail">I had a task to make a solution for continuing to develop the and support for the source of the online exam builder project, and doing recruitment process for selecting programmers.</p>
                 <div id="status_box">
                     <a target="_blank" id="web_page" href="https://www.mhelli.com/">mhelli.com</a>
                     <a target="_blank" id="web_page" href="https://pannel.mhelli.com/">pannel.mhelli.com</a>
@@ -142,7 +143,7 @@
                     </div>
                 </div>
                 <div id="title2">Sadr Hospital - 2020    <a target="_blank" id="web_page" href="https://onlinesadr.ir/Home/AboutUs">(onlinesadr.com - Dr. Saidi)</a></div>
-                <div id="detail">I was the head of the technical team and the architect of the clinic's internal and online softwares.</div>
+                <p id="detail">I was the head of the technical team and the architect of the clinic's internal and online softwares.</p>
                 <div id="status_box">
                     <div id="status_bar">
                         <h4>Solution Architect</h4>
