Two more paragraphs

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 
             <div id="title">Awards and Certificates</div>
                 <div id="title2">Art University of Isfahan - 2012 to 2015  <a id="web_page" target="_blank" href="https://en.aui.ac.ir/">(aui.ac.ir)</a></div>
+                <p id="detail">I had 3 workshops to introduce graphic designer students to the concepts of web programming.</p>
                 <div id="status_box">
                     <a target="_blank" id="image_3" href="./img/ArtUniversityofIsfahan-2015.jpg"><img src="./img/ArtUniversityofIsfahan-2015.jpg" alt="Art University of Isfahan - 2015"/></a>
                     <a target="_blank" id="image_3" href="./img/ArtUniversityofIsfahan-2013.jpg"><img src="./img/ArtUniversityofIsfahan-2013.jpg" alt="Art University of Isfahan - 2013"/></a>
@@ -190,6 +191,7 @@
                     </div>
                 </div>
                 <div id="title2">Patent certificate<a id="web_page" target="_blank" href="https://ipm.ssaa.ir/_Search/Invention.aspx#page-1">(ipm.ssaa.ir RN=66427)</a></div>
+                <p id="detail">I was a member of the team of inventors of a kind of portable computer. I have been in charge of designing and programing software and middlewares.</p>
                 <div id="status_box">
                     <a target="_blank" id="image_3" href="./img/Patent.jpeg"><img src="./img/Patent.jpeg" alt="Patent certificate"/></a>
                 </div>
