--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <meta name="keywords" content="محمد ابراهیم سپهر, سپهر, mesepehr, Mohammad E. Sepehr, Solution Architect, Programmer, Technical Lead, Agile Coach">
 
     <link rel="preload" href="./fonts/calibri.eot" as="font" type="font/woff" crossOrigin="anonymous">
-    <link rel="preload" href="./fonts/calibri.eot?#iefix" as="font" type="font/woff" crossOrigin="anonymous">
     <link rel="preload" href="./fonts/calibri.woff" as="font" type="font/woff" crossOrigin="anonymous">
+    <link rel="preload" href="../fonts/Yekan.woff" as="font" type="font/woff" crossOrigin="anonymous">
     <link rel="preload" href="./fonts/calibri.ttf" as="font" type="font/woff" crossOrigin="anonymous">
-    <link rel="preload" href="./fonts/calibri.svg#calibri" as="font" type="font/woff" crossOrigin="anonymous">
     <link rel="preload" href="./fonts/calibri.svg#calibri" as="font" type="font/woff" crossOrigin="anonymous">
     <link rel="preload" href="./img/mesepehr.jpg" as="image" type="image/jpeg" crossOrigin="use-credentials">
 
@@ -64,9 +63,20 @@
         </div>
         <div id="right_side">
             <div id="title">Director of Development - Research - Technical Architect</div>
-            <div id="title2"> (2021 - Present)</div>
+            <div id="title2">Bio</div>
+                <div id="bio_part">
                 <!-- <div id="detail">Technical Scope:  CI/CD, PHP, C#, Python, NodeJS, SQL, JavaScript</div> -->
-                <p id="detail">I got involved in companies to analyse problems and make solutions. Technical team director and guides them to do their best. Participate in hiring more than 20 developers. then help them to achieve higher levels of output & service. Do the product owner role to raise customer's awareness of the project process and the situation.</p>
+                    <p id="detail_fa">خیلی زود کار حرفه ای را بار ورود به حوزه نرم افزار آغاز کردم. داشتن تجربه کار های نرم افزاری و بعد ورود به رشته کامپیوتر، مرا در این شروع سریع کمک کرد. <br/><br/>
+                    در سن ۲۴ سالگی سرپرست فنی تیم برنامه نویسی شرکت شده بودم  و  مستقیما در فرایند گزینش و آموزش نیرو های فنی حضور پیدا می کردم.<br/><br/>
+                    تجربه برنامه نویسی نرم افزار های سفارشی باعث شد در سن ۲۶ سالگی یک فریم ورک برنامه نویسی به اسم <a id="web_page_fa" target="_blank" href="https://github.com/SaffronCode/SaffronCode">"زعفران کد"</a> را توسعه و معرفی کنم که توسط آن صد ها نرم افزار موبایل توسط ده ها برنامه نویس شرکت تولید و به مشتریان ارائه شد.<br/><br/>
+                    با کسب تجربه حضور در بین صاحبین کسب و کار جهت توسعه نرم افزار های سفارشی و استارت آپ های مختلف،  به سمت ارائه خدمات مشاوره فنی و برنامه ریزی و طراحی معماری استارت آپ ها برای صاحبین کسب و کار شدم. از سوی دیگر نقش هایی مثل مدیریت و برنامه ریزی اجرای پروژه های نرم افزاری، تیم سازی و آموزش برنامه نویسان جوان و هدایت آنها برای حضور در بازار حرفه ای برنامه نویسی منطبق با نیاز بازار را نیز با اشتیاق دنبال می کنم.<br/><br/>
+                    هنوز به کار های برنامه نویسی و حل مسئله های پیچیده الگوریتمی به هدف پیشبرد هرچه بهتر نرم افزار های مشتریان می پردازم تا هیچکدام از پروژه ها و برنامه نویسان در هیچ یک از مراحل اجرایی پروژهها متوقف و نا امید نشوند.</p>
+                    <p id="detail">I started my professional career very soon after entering the university for field of computer software.<br/><br/>
+                        At the age of 24, I became the technical director of the programming team and was directly involved in the process of selecting and training technical staff.<br/><br/>
+                        The experience of custom software programming led me to develop and introduce a programming framework called <a id="web_page" target="_blank" href="https://github.com/SaffronCode/SaffronCode">"SaffronCode SDK"</a> at the age of 26, which hundreds of mobile software were produced and provided to customers by dozens of programmers.<br/><br/>
+                        Gaining experience in being among business owners to develop custom software and various startups, I turned to providing technical consulting services and planning and architectural design of softwares for startups. On the other hand, I eagerly pursue roles such as team building and training young programmers and guiding them to participate in the professional programming fields.<br/><br/>
+                        I am still working on programming and solving complex algorithmic problems with the aim of advancing the client software as much as possible so that none of the projects and programmers being stopped and disappointed in any of the project implementation stages.</p>
+                </div>
             
             <!-- <div id="title2">Major Customers</div> -->
                 <div id="title2">ByUs Co. - 2022    <a target="_blank" id="web_page" href="https://byus.ir/">(byus.ir - Mr. Kazemi)</a></div>
