--- a/index.html
+++ b/index.html
@@ -270,8 +270,20 @@
                     <div><div style="width:90%"></div></div>
                 </div>
                 <div id="status_bar">
+                    <h4>UML</h4>
+                    <div><div style="width:80%"></div></div>
+                </div>
+                <div id="status_bar">
+                    <h4>SQL</h4>
+                    <div><div style="width:80%"></div></div>
+                </div>
+                <div id="status_bar">
                     <h4>Front-end</h4>
                     <div><div style="width:70%"></div></div>
+                </div>
+                <div id="status_bar">
+                    <h4>Database</h4>
+                    <div><div style="width:60%"></div></div>
                 </div>
                 <div id="status_bar">
                     <h4>C#</h4>
