--- a/index.html
+++ b/index.html
@@ -175,6 +175,53 @@
 
 
             <div id="title">Awards and Certificates</div>
+                <div id="title2">Interviews</div>
+                <p id="detail">I have had interviews and lectures about "Saffron Code SDK".</p>
+                <div id="status_box">
+                    <div id="image_2">
+                        <a target="_blank" href="https://farhikhtegandaily.com/news/32219/%D9%87%D8%B1-%D9%81%D8%B1%D8%AF-%D9%85%DB%8C%E2%80%8C%D8%AA%D9%88%D8%A7%D9%86%D8%AF-%DB%8C%DA%A9-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%E2%80%8C%D9%86%D9%88%DB%8C%D8%B3-%D9%85%D9%88%D8%A8%D8%A7%DB%8C%D9%84-%D8%A8%D8%A7%D8%B4%D8%AF/"><img src="./img/Interview_farhikhtegan.jpg" alt="Interview with Farhikhtegan mag."/>
+                            farhikhtegandaily.com Text (Farsi)
+                        </a>
+                    </div>
+                    <div id="image_2">
+                        <a target="_blank" id="image_2" href="http://dotnetexpert.ir/fa/teach/Videos/q/%D8%B3%D8%A7%D8%AE%D8%AA-%D8%A7%D9%BE%D9%84%DB%8C%DA%A9%DB%8C%D8%B4%D9%86-android-%D9%88-ios-%D8%A8%D8%A7-%D8%B2%D8%B9%D9%81%D8%B1%D8%A7%D9%86-%D8%A7%DB%8C%D8%B1%D8%A7%D9%86%DB%8C/92"><img src="./img/Interview_karshenasan.jpg" alt="Interview with Karshenasan.net"/>
+                            dotnetexpert.ir Video (Farsi)
+                        </a>
+                    </div>
+                </div>
+                <div id="title2">Patent certificate</div>
+                <p id="detail">I was a member of the team of inventors of a kind of portable computer. I have been in charge of designing and programing software and middlewares.</p>
+                <div id="status_box">
+                    <div id="image_3">
+                        <a target="_blank" href="./img/Patent.jpeg"><img src="./img/Patent.jpeg" alt="Patent certificate"/></a>
+                        <a target="_blank" href="https://ipm.ssaa.ir/_Search/Invention.aspx#page-1">ipm.ssaa.ir RN=66427</a>
+                    </div>
+                    <div id="image_3">
+                        <a target="_blank" href="https://github.com/SaffronCode/SaffronCode/stargazers"><img src="./img/SaffronCode.png" alt="SaffronCode SDK logo"/>
+                        SaffronCode SDK
+                        </a>
+                    </div>
+                </div>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>UI Programmer</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Middle Ware Programmer</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>SDK Programming</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Component Development</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar"></div>
+                    <div id="status_bar"></div>
+                </div>
                 <div id="title2">Art University of Isfahan - 2012 to 2015  <a id="web_page" target="_blank" href="https://en.aui.ac.ir/">(aui.ac.ir)</a></div>
                 <p id="detail">I had 3 workshops to introduce graphic designer students to the concepts of web programming.</p>
                 <div id="status_box">
@@ -199,23 +246,6 @@
                         <h4>Graphic</h4>
                         <div><div style="width:10%"></div></div>
                     </div>
-                </div>
-                <div id="title2">Patent certificate<a id="web_page" target="_blank" href="https://ipm.ssaa.ir/_Search/Invention.aspx#page-1">(ipm.ssaa.ir RN=66427)</a></div>
-                <p id="detail">I was a member of the team of inventors of a kind of portable computer. I have been in charge of designing and programing software and middlewares.</p>
-                <div id="status_box">
-                    <a target="_blank" id="image_3" href="./img/Patent.jpeg"><img src="./img/Patent.jpeg" alt="Patent certificate"/></a>
-                </div>
-                <div id="status_box">
-                    <div id="status_bar">
-                        <h4>UI Programmer</h4>
-                        <div><div style="width:100%"></div></div>
-                    </div>
-                    <div id="status_bar">
-                        <h4>Middle Ware Programmer</h4>
-                        <div><div style="width:100%"></div></div>
-                    </div>
-                    <div id="status_bar"></div>
-                    <div id="status_bar"></div>
                 </div>
                 
 
