--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <div id="status_box">
                     <div id="image_2">
                         <a target="_blank" href="https://farhikhtegandaily.com/news/32219/%D9%87%D8%B1-%D9%81%D8%B1%D8%AF-%D9%85%DB%8C%E2%80%8C%D8%AA%D9%88%D8%A7%D9%86%D8%AF-%DB%8C%DA%A9-%D8%A8%D8%B1%D9%86%D8%A7%D9%85%D9%87%E2%80%8C%D9%86%D9%88%DB%8C%D8%B3-%D9%85%D9%88%D8%A8%D8%A7%DB%8C%D9%84-%D8%A8%D8%A7%D8%B4%D8%AF/"><img src="./img/Interview_farhikhtegan.jpg" alt="Interview with Farhikhtegan mag."/>
-                            farhikhtegandaily.com Text (Farsi)
+                            farhikhtegandaily.com Text
                         </a>
                     </div>
                     <div id="image_2">
