--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div id="title2">Bio</div>
                 <div id="bio_part">
                 <!-- <div id="detail">Technical Scope:  CI/CD, PHP, C#, Python, NodeJS, SQL, JavaScript</div> -->
-                    <p id="detail_fa">خیلی زود کار حرفه ای را بار ورود به حوزه نرم افزار آغاز کردم. داشتن تجربه کار های نرم افزاری و بعد ورود به رشته کامپیوتر، مرا در این شروع سریع کمک کرد. <br/><br/>
+                    <p id="detail_fa">خیلی زود کار حرفه ای را با ورود به حوزه نرم افزار آغاز کردم. داشتن تجربه کار های نرم افزاری و بعد ورود به رشته کامپیوتر، مرا در این شروع سریع کمک کرد. <br/><br/>
                     در سن ۲۴ سالگی سرپرست فنی تیم برنامه نویسی شرکت شده بودم  و  مستقیما در فرایند گزینش و آموزش نیرو های فنی حضور پیدا می کردم.<br/><br/>
                     تجربه برنامه نویسی نرم افزار های سفارشی باعث شد در سن ۲۶ سالگی یک فریم ورک برنامه نویسی به اسم <a id="web_page_fa" target="_blank" href="https://github.com/SaffronCode/SaffronCode">"زعفران کد"</a> را توسعه و معرفی کنم که توسط آن صد ها نرم افزار موبایل توسط ده ها برنامه نویس شرکت تولید و به مشتریان ارائه شد.<br/><br/>
                     با کسب تجربه حضور در بین صاحبین کسب و کار جهت توسعه نرم افزار های سفارشی و استارت آپ های مختلف،  به سمت ارائه خدمات مشاوره فنی و برنامه ریزی و طراحی معماری استارت آپ ها برای صاحبین کسب و کار شدم. از سوی دیگر نقش هایی مثل مدیریت و برنامه ریزی اجرای پروژه های نرم افزاری، تیم سازی و آموزش برنامه نویسان جوان و هدایت آنها برای حضور در بازار حرفه ای برنامه نویسی منطبق با نیاز بازار را نیز با اشتیاق دنبال می کنم.<br/><br/>
@@ -363,8 +363,7 @@
                     </div>
                 </div>
 
-                <br/>
-                <br/>
+                <div id="extra_space"></div>
 
             
 
@@ -436,6 +435,62 @@
                     </div>
                 </div>
             <div id="extra_space"></div>
+            <div id="title">Personal Characteristics</div>
+                <p id="detail">Characteristics</p>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>Honesty</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Problem-solving</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Helpfulness</h4>
+                        <div><div style="width:99%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Sincerity</h4>
+                        <div><div style="width:90%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Creative thinking</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Leadership skills</h4>
+                        <div><div style="width:99%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Interpersonal skills</h4>
+                        <div><div style="width:70%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Adaptability</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                </div>
+                <p id="detail">Hobbies</p>
+                <div id="status_box">
+                    <div id="status_bar">
+                        <h4>Nature</h4>
+                        <div><div style="width:90%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Swimming</h4>
+                        <div><div style="width:90%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Hicking</h4>
+                        <div><div style="width:100%"></div></div>
+                    </div>
+                    <div id="status_bar">
+                        <h4>Historical places</h4>
+                        <div><div style="width:70%"></div></div>
+                    </div>
+                </div>
+                <div id="extra_space"></div>
         </div>
     </div>
 </body>
