--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 </div>
 
 
-        <div id="title">Chief Technology Officer - Lead Programmer</div>
+        <div id="title">Co-founder - Lead Programmer</div>
         <div id="title2">Saffron Co.(2019 - 2021)</div>
             <div id="detail">Technical Scope:  Development Director, Technical Lead, Research, JavaScript, Adobe Air</div>
             <div id="detail">I was creator and founder of a Software Development Kit, named SaffronCodeSDK which gathered from about 500 Libraries and Tools.</div>
@@ -196,9 +196,32 @@
             </div>
 
 
-        <div id="title">Technical Advisor for Sturtups - 2018 to present</div>
+        <div id="title">Technical Advisor for Startups</div>
         <p id="detail">As an experiented technical person, who had hand over both programing and mentoring for software systems, I was involved in many startups as a Technical Advisor. some of them mentioned here:</p>
-        <div id="title2">Sarrafi Digital    <span id="web_page">(Mr. Mazrooi, Mr. Mojtabai)</span></div>
+        <div id="title2">Forjumps - 2022    <span id="web_page">(Mrs. Gharib, Mr. Kazemi)</span></div>
+            <div id="detail">Forjump was some kind of video sharing comunity startup. I had to make a sutable and practical solution for hosting and promoting startup's web site on AWS services.</div>
+            <div id="status_box">
+                <a target="_blank" id="web_page" href="https://forjump.com/">forjump.com</a>
+            </div>
+            <div id="status_box">
+                <div id="status_bar">
+                    <h4>PHP</h4>
+                    <div><div style="width:100%"></div></div>
+                </div>
+                <div id="status_bar">
+                    <h4>MySQL</h4>
+                    <div><div style="width:95%"></div></div>
+                </div>
+                <div id="status_bar">
+                    <h4>AWS</h4>
+                    <div><div style="width:80%"></div></div>
+                </div>
+                <div id="status_bar">
+                    <h4>Github Actions</h4>
+                    <div><div style="width:80%"></div></div>
+                </div>
+            </div>
+        <div id="title2">Sarrafi Digital - 2021    <span id="web_page">(Mr. Mazrooi, Mr. Mojtabai)</span></div>
             <p id="detail">SarafiDigital was an Iranian online exchange startup. I had many researches about blockchain and cryptocurrencies and I selected a great team of programmers and graphic designers to complete the first phase of this project.</p>
             <div id="status_box">
                 <a id="web_page" target="_blank" href="https://beta.sarafidigital.com/">beta.sarafidigital.com</a>
@@ -237,31 +260,8 @@
                     <div><div style="width:30%"></div></div>
                 </div>
             </div>
-        <div id="title2">Forjumps    <span id="web_page">(Mrs. Gharib, Mr. Kazemi)</span></div>
-            <div id="detail">Forjump was some kind of video sharing comunity startup. I had to make a sutable and practical solution for hosting and promoting startup's web site on AWS services.</div>
-            <div id="status_box">
-                <a target="_blank" id="web_page" href="https://forjump.com/">forjump.com</a>
-            </div>
-            <div id="status_box">
-                <div id="status_bar">
-                    <h4>PHP</h4>
-                    <div><div style="width:100%"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>MySQL</h4>
-                    <div><div style="width:95%"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>AWS</h4>
-                    <div><div style="width:80%"></div></div>
-                </div>
-                <div id="status_bar">
-                    <h4>Github Actions</h4>
-                    <div><div style="width:80%"></div></div>
-                </div>
-            </div>
 
-            <div id="title2">AzTa Bazar <span id="web_page">(Mr. Mohammad Zadeh, Mr. Shafeei)</span></div>
+            <div id="title2">AzTa Bazar - 2017 <span id="web_page">(Mr. Mohammad Zadeh, Mr. Shafeei)</span></div>
             <p id="detail">AzTa Bazar was an online shopping service, foucused on grocery products. the start up was created from a server side panel for admins, an Android application for grocery stores admins and an Android application for customers.</p>
             <div id="status_box">
                 <a id="web_page" target="_blank">No link available</a>
@@ -285,6 +285,7 @@
                 </div>
             </div>
 
+            <div id="extra_space"></div>
 
             <div id="title">Awards and Certificates</div>
                 
@@ -411,7 +412,7 @@
                 </div>
             </div>
                 
-            <div id="title">Additional experience</div>
+            <div id="title2">Additional experience</div>
                 <p id="detail">Additional experience as a web developer for Hoogaman for 2 years and Software Developer for E-Learning application and games for Ganjineh Yaad Co.</p>
                 <div id="status_box">
                     <a id="web_page" target="_blank" href="http://www.hoogaman.com/">Hoogaman Mr. Ghashghai</a>
