--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
 
         <div id="title">Technical Advisor for Startups</div>
-        <p id="detail">As an experiented technical person, who had hand over both programing and mentoring for software systems, I was involved in many startups as a Technical Advisor. some of them mentioned here:</p>
+        <p id="detail">As an experiented technical person, who had hand over both programing and mentoring for software systems, I was involved in many startups as a Technical Advisor, Agile project manager and so on. some of them are mentioned here:</p>
         <div id="title2">Forjumps - 2022    <span id="web_page">(Mrs. Gharib, Mr. Kazemi)</span></div>
             <div id="detail">Forjump was some kind of video sharing comunity startup. I had to make a sutable and practical solution for hosting and promoting startup's web site on AWS services.</div>
             <div id="status_box">
@@ -228,6 +228,10 @@
             </div>
             <div id="status_box">
                 <div id="status_bar">
+                    <h4>Agile Coach</h4>
+                    <div><div style="width:100%"></div></div>
+                </div>
+                <div id="status_bar">
                     <h4>BlockChains</h4>
                     <div><div style="width:100%"></div></div>
                 </div>
@@ -236,7 +240,7 @@
                     <div><div style="width:80%"></div></div>
                 </div>
                 <div id="status_bar">
-                    <h4>Crypto</h4>
+                    <h4>Crypto Currencies</h4>
                     <div><div style="width:80%"></div></div>
                 </div>
                 <div id="status_bar">
